Add remember me option and forgot password link

--- a/login.html
+++ b/login.html
@@ -147,7 +147,15 @@
                 <input type="password" id="password" name="password" placeholder="Minimal 8 karakter">
                 <small>Pesan error akan muncul di sini</small>
             </div>
-            
+            <div class="options-group">
+                <label class="remember-me">
+                    <input type="checkbox" id="rememberMe"> 
+                    <span>Ingat Saya</span>
+                </label>
+                <a href="#" class="forgot-password">Lupa Password?</a>
+            </div>
+
+            <button type="submit">Login</button>
             <button type="submit">Login</button>
         </form>
     </div>
