--- a/login.html
+++ b/login.html
@@ -127,6 +127,50 @@
             button {
                 padding: 12px; /* Sesuaikan ukuran tombol */
             }
+            /* --- 6. Opsi Tambahan (Remember Me & Forgot Pass) --- */
+        .options-group {
+            display: flex;
+            justify-content: space-between; /* Pisahkan ke kiri dan kanan */
+            align-items: center;
+            margin-bottom: 20px;
+            font-size: 14px;
+        }
+
+        /* Checkbox Customization */
+        .remember-me {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            color: #555;
+        }
+
+        .remember-me input {
+            margin-right: 8px;
+            width: auto; /* Override width 100% dari input biasa */
+            cursor: pointer;
+        }
+
+        /* Link Lupa Password */
+        .forgot-password {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: 600;
+            transition: color 0.3s;
+        }
+
+        .forgot-password:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
+
+        /* Responsif untuk HP kecil: Tumpuk ke bawah agar rapi */
+        @media (max-width: 350px) {
+            .options-group {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
+        
         }
     </style>
 </head>
